# tranarappen

./: .gitmodules  README.md  docker-compose.yml
android/: README.md
android/CoachAndroidApp/: .gitignore  Makefile  Makefile~  build.gradle  gplv3.txt~
android/CoachAndroidApp/app/: build.gradle  proguard-rules.pro
android/CoachAndroidApp/app/src/main/: AndroidManifest.xml
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/Auth/: Authenticator.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/Session/: CoachAppSession.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/activities/: ActivitySwitcher.java  ClubInfoActivity.java  LocalMediaManager.java  LogActivity.java  LoginActivity.java  MediaRecorderActivity.java  MemberActivity.java  SettingsActivity.java  SplashActivity.java  TeamsActivity.java  TopActivity.java  TrainingPhasesActivity.java  VideoActivity.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/adapters/: CoachappExpandableList.java  ExpandableListAdapter.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/camera/: CameraHelper.java  MediaCodecWrapper.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/filters/: BaseFilter.java  BaseFilterEngine.java  MediaFilter.java  MediaFilterEngine.java  MediaMemberFilter.java  MediaStatusNameFilter.java  MemberFilter.java  MemberFilterEngine.java  MemberTeamFilter.java  NameBaseFilter.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/fragments/: AdaptedSwipeViewPager.java  AutoFitTextureView.java  Camera2Fragment.java  DummyContent.java  MemberFragment.java  SimpleVideoFragment.java  TeamFragment.java  TopFragment.java  TrainingPhasesFragment.java  UserFragment.java  VideoCapture.java  VideoPreview.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/fragments/dummy/: DummyContent.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/http/: HttpAccess.java  HttpAccessException.java  HttpSettings.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/json/: JsonAccess.java  JsonAccessException.java  JsonSettings.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/misc/: CADateFormat.java  Log.java  ViewSetter.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/model/: Club.java  CoachAppBase.java  LocalUser.java  LogMessage.java  Media.java  Member.java  Team.java  TrainingPhase.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/report/: ReportUser.java
android/CoachAndroidApp/app/src/main/java/com/sandklef/coachapp/storage/: BaseStorageHelper.java  ConnectionStatusListener.java  DBException.java  LocalMediaStorage.java  LocalStorage.java  LocalStorageSync.java  Storage.java  StorageException.java  StorageNoClubException.java  StorageRemoteWorker.java  StorageSync.java  StorageSyncListener.java  StorageUpdateListener.java
android/CoachAndroidApp/app/src/main/res/drawable/drawable/: sync_alert.xml  sync_off.xml
android/CoachAndroidApp/app/src/main/res/layout/: activity_club_info.xml  activity_local_media_manager.xml  activity_log.xml  activity_login.xml  activity_main.xml  activity_member.xml  activity_settings.xml  activity_splash.xml  activity_teams.xml  activity_top.xml  activity_training_phases.xml  activity_video.xml  capture_video.xml  coachapp_list_group.xml  coachapp_list_item.xml  fragment_blank.xml  fragment_info.xml  fragment_item_grid.xml  fragment_item_list.xml  fragment_media.xml  fragment_member_media.xml  fragment_member_media_list.xml  fragment_simple_video.xml  fragment_team.xml  fragment_team_list.xml  fragment_top.xml  fragment_user.xml  log_list_group.xml  log_list_item.xml  media_list.xml  media_recorder_activity.xml
android/CoachAndroidApp/app/src/main/res/layout-land/: activity_member.xml
android/CoachAndroidApp/app/src/main/res/menu/: local_media_menu.xml  log_media_menu.xml  member_menu.xml  top_menu.xml  top_menu_debug.xml
android/CoachAndroidApp/app/src/main/res/values/: refs.xml  strings.xml
android/CoachAndroidApp/app/src/main/res/values-large/: refs.xml
android/CoachAndroidApp/app/src/main/res/values-sv/: strings.xml  strings.xml~
android/CoachAndroidApp/app/src/main/res/xml/: settings.xml
android/CoachAndroidApp/app/src/test/java/coachassistant/sandklef/com/coachapp/: ExampleUnitTest.java
android/CoachAndroidApp/gradle/wrapper/: gradle-wrapper.properties
marketing/: README  index.html  test.html
router/: nginx.conf  snakeoil.crt  snakeoil.csr  snakeoil.key
server/: Dockerfile  README.md  coachassistant-server.cabal  coachassistant.cabal  fig.yml  run.sh  schema
server/doc-template/: api-docs-all.st  api-docs-resource.st  docs.css
server/source/: Main.hs  Other.hs  Routes.hs  Types.hs  Utilities.hs
test/: members.sh  populate.sh  testing-android.md
web/: .gitignore  Dockerfile  Gruntfile.js  LICENSE  README.md  bower.json  fig.yml  lambdatrade.js  nginx.conf  package.json  run.sh
web/source/: index.html  script.js  style.css
web/source/templates/: clubs.html  member.html  members.html  team.html  teams.html  training-phase.html  training-phases.html  video.html  videos.html
web/tests/: README.md  conf.js  main-spec.js
