name:          coachassistant-server
version:       0.0.0.0
synopsis:      The server component for coachassistant
description:   The server component for coachassitant, a software suite
               to assist coaches/instructors during actual trianing.
license:       BSD3
license-file:  LICENSE
author:        Jon Kristensen
maintainer:    info@lambdatrade.com
copyright:     Jon Kristensen, 2015
category:      Sports
build-type:    Simple
cabal-version: >=1.10

executable coachassistant-server
  main-is:          Main.hs
  build-depends:    aeson,
                    base >=4.7 && <4.8,
                    bytestring,
                    data-default,
                    directory,
                    exceptions,
                    json-schema,
                    lambdatrade-common,
                    mtl,
                    mtl-compat,
                    persistent >=2,
                    persistent-template,
                    rest-core,
                    rest-wai,
                    text,
                    transformers,
                    uuid,
                    warp
  hs-source-dirs:   source
  default-language: Haskell2010