name:          coachassistant
version:       0.0.0.0
synopsis:      The server component for coachassistant
description:   The server component for coachassistant, a software suite
               to assist coaches/instructors during trianing.
license:       BSD3
license-file:  LICENSE
author:        Jon Kristensen
maintainer:    jon@nejla.com
copyright:     Jon Kristensen, 2015
category:      Sports
build-type:    Simple
cabal-version: >=1.10

-- The conduit and psqueues dependencies are only there for specifying the
-- versions; transformers should be >= 0.4
executable coachassistant
  main-is:          Main.hs
  other-modules:    Other, Routes, Types, Utilities
  build-depends:    aeson,
                    async,
                    base >=4.7 && <4.8,
                    bytestring,
                    conduit ==1.2.6.1,
                    data-default,
                    directory,
                    esqueleto,
                    exceptions,
                    generic-aeson,
                    json-schema,
                    lambdatrade-common,
                    mtl,
                    mtl-compat,
                    persistent >=2,
                    persistent-template,
                    process,
                    psqueues ==0.2.0.3,
                    rest-core,
                    rest-gen >= 0.17,
                    rest-wai,
                    text,
                    time,
                    transformers ==0.4.3.0,
                    uuid,
                    warp
  hs-source-dirs:   source
  default-language: Haskell2010
  ghc-options:      -threaded